--- a/styles/v2.module.scss
+++ b/styles/v2.module.scss
@@ -355,7 +355,35 @@ transform: translateX(-3.125%) translateY(-2.75%);
   margin-right: auto;
  // align-self: center;
 }
+.ghl-form-wrap {
+
+  max-width: auto !important;
+}
+#form_builder {
+  background-color: red !important;
+  background: red !important;
+}
+#_builder-form {
+background-color: red !important;
+}
+.form-builder--wrap-full .form-builder--wrap {
+  background-color: red !important;
+}
+* #_builder-form .ghlForm #form_builder  {
+  background-color: transparent;
+}
 .formContainer {
+  //display: flex;
+  //flex-direction: column;
+  display: block;
+  width: 100%; /* Take the full width of the parent */
+  align-items: center;
+  padding-top: 2.5rem;
+
+  margin-left: auto;
+ // background-color: red;
+  margin-right: auto;
+  /*
   display: flex;
   flex-direction: column;
   width: fit-content;
@@ -363,22 +391,33 @@ transform: translateX(-3.125%) translateY(-2.75%);
   align-items: center;
   padding-top: 2.5rem;
   margin-left: auto;
-  margin-right: auto;
+  margin-right: auto;*/
 }
+.ghlForm {
+  background-color: transparent !important;
+  width: 90%; /* Fill the width of its container */
+  height: 90%; /* Fill the height of its container */
+}
+
 .formWrapper {
-  height: 14.55rem;
+  
+  //height: 14.55rem;
+  height: fit-content;
+ // width: 100%;
   width: 40.105rem;
   background: rgba(255, 255, 255, 0.13);
   flex-shrink: 0;
   border-radius: 27px;
   display: flex;
   flex-direction: column;
+  padding-top: .75rem;
   gap: 1.5rem;
   align-items: center;
   justify-content: space-evenly;
   align-self: center;
   margin-left: auto;
   margin-right: auto;
+
 
 }
 .formInputField {
@@ -471,12 +510,12 @@ transform: translateX(-3.125%) translateY(-2.75%);
   flex-direction: column;
   padding-left: 10%;
   padding-right: 10%;
-  padding-top: 5%;
-  padding-bottom: 5%;
+  padding-top: 4.5rem;
+  padding-bottom: 4.5rem;
   background-color: #fff;
 }
 .policyHeader {
-  font-size: clamp(1.25rem, 2vw, 1.5rem);
+  font-size: clamp(1.325rem, 2vw, 1.675rem);
   font-family: Helvetica Neue;
   font-weight: 800;
   color:#000;
@@ -484,7 +523,10 @@ transform: translateX(-3.125%) translateY(-2.75%);
 .policyPageHeader {
   font-size: clamp(1rem, 2vw, 1.125rem);
   font-family: Helvetica Neue;
+  padding-bottom: .5rem;
+  //padding-top: .25rem;
   font-weight: 800;
+  //line-height: 160%;
   color:#000;
 }
 .policyPageText {
@@ -849,9 +891,11 @@ transform: translateX(-3.125%) translateY(-2.75%);
    // align-self: center;
   }
   .formContainer {
-    display: flex;
-    flex-direction: column;
-    width: 90%;
+    //display: flex;
+   // flex-direction: column;
+    display: block;
+    width: 100%;
+   // width: 90%;
    // background-color: blue;
     height: fit-content;
     align-items: center;
@@ -865,6 +909,7 @@ transform: translateX(-3.125%) translateY(-2.75%);
     background: rgba(255, 255, 255, 0.13);
     flex-shrink: 0;
     border-radius: 27px;
+    //padding-top: .5rem;
     display: flex;
     flex-direction: column;
     gap: .5rem;
