--- a/styles/education.module.scss
+++ b/styles/education.module.scss
@@ -644,7 +644,282 @@
     }
 }
 @media (min-width: 481px) and (max-width: 768px) {
+    .educationContainer {
+        background-color: #252525;
+        height: fit-content;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        padding-bottom: 2.25rem;
+    }
+    .educationTopContainer {
+        width: 100%;
+        height: fit-content;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-top: 3.75rem;
+    }
+    .educationTopHeader {
+        color: #FAF3D6;
+        font-family: "Helvetica Neue";
+        font-size: clamp(1.124rem, 2vw, 1.5rem);
+        font-style: normal;
+        font-weight: 500;
+        line-height: 134%; /* 134.286% */
+        letter-spacing: 0.75px;
+        text-transform: uppercase;
+        margin-left: auto;
+        margin-right: auto;
+    
+    }
+    .panelContainer {
+        width: 88%;
+        //height: 26.25rem;
+        //background-color: red;
+       // height: ;
+       z-index: 1;
+      // margin-top: 3rem;
+      display: flex;
+      flex-direction: column;
+    }
+    .educationTopPanel {
+        width: 100%;
+   
+        height: 40vh;
+        box-shadow: 0px 6px 0px 0px rgba(27,27,27,.2);
+        background-color: #353535;
+        border-radius: 24px;
+        display: flex;
+        background-image: url('../public/photos/panel3.png');
+        background-size: cover;
+        background-repeat: no-repeat;
+       // align-self: center;
+        //align-items: center;
+        //justify-content: center;
+        margin-left: auto;
+        margin-right: auto;
+        z-index: 2;
+        margin-top: 2.25rem;
+    }
+    .educationPanelText {
+        color: #FFFBEC;
+        text-align: center;
+        font-family: "Helvetica Neue";
+        font-size: clamp(2.5rem, 4vw, 4rem);
+        font-style: normal;
+        font-weight: 600;
+        line-height: 121.98%; /* 87.825px */
+        letter-spacing: -1.5px;
+        text-transform: capitalize;
+        margin-left: auto;
+        margin-right: auto;
+        display:inline-block;
+        vertical-align: middle;
+        margin-top: auto;
+        margin-bottom: auto;
+        z-index: 999;
+    }
+    .educationAccessButton {
+        width: 45%;
+      //  width: 22.6%;
+        height:3.5rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        //border: 2.25px solid #FAF3D6;
+        color: #0a0a0a;
+        text-align: center;
+        font-family: "Helvetica Neue";
+        font-size: clamp(1.25rem, 2vw, 1.425rem);
+        font-style: normal;
+        font-weight: 600;
+        line-height: 121.98%; /* 27.445px */
+        letter-spacing: -0.675px;
+        text-transform: capitalize;
+        border-radius: 10px;
+        background: #FAF3D6;
+        gap:1rem;
+        padding-left: 0;
+        transform: translateY(-1.75rem);
+        transition: all .175s linear;
+        z-index: 3;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .textCircleV2 {
+        z-index: 1;
+        position:absolute;
+        top:-1.625rem;
+        left:-4.875rem;
+        animation-duration: 35s;
+        animation-name: truka-circle;
+        animation-iteration-count:infinite;
+        animation-timing-function: linear;
+        display: none;
+    }
+    .educationSeperator {
+        margin-left: auto;
+        margin-right:auto;
+      //  transform: scale(.9);
+        width: 85%;
+        z-index: 5;
+        display: flex;
+        margin-top:1rem;
+    }
+    .plusSymbol {
+        align-self: flex-start;
+        transform: translateY(-5%) translateX(5%) scale(.9);
+        &:nth-of-type(1) {
+            margin-right: 0;
+        }
+        &:nth-of-type(2) {
+            margin-left: 2.75rem;
+        }
+    }
+    .educationBottomContainer {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        margin-top: 2.5rem;
+        height: fit-content;
+        padding-bottom: 4rem;
+    }
+    .educationBottomWrapper {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        align-items: center;
+        justify-content: space-between;
+        padding-left: 10%;
+        //background-color: red;
+        gap:2rem;
+    }
+    .educationBottomWrapperAlt {
+        display: flex;
+        flex-direction: column-reverse;
+        width: 100%;
+        align-items: center;
+       // padding-left: 10%;
+       // background-color: red;
+        gap:2rem;
+        justify-content: space-between;
+    }
+    .educationWrapperImageTop {
+        //width: 42rem;
+       // height: 52.56%;
+       //margin-top: ;
+        width: 100%;
+        height: 40vh;
+        z-index: 5;
+       // margin-left: 10%;
+        border-bottom-left-radius: 18.75px;
+        border-top-left-radius: 18.75px;
+        background-color: #353535;
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-image: url('../public/photos/foundation.png');
+    }
+    .educationWrapperImageMid {
+        //width: 40.75rem;
+       // height: 52.56%;
+        width: 90vw;
 
+        height: 40vh;
+        margin-right: auto;
+        z-index: 5;
+       // transform: translateX(0%);
+        border-bottom-right-radius: 18.75px;
+        border-top-right-radius: 18.75px;
+        background-color: #353535;
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-image: url('../public/assets/community5.png');
+    }
+    .educationWrapperImageBottom {
+        //width: 42rem;
+       // height: 52.56%;
+       width: 100%;
+       height: 40vh;
+        z-index: 5;
+        border-bottom-left-radius: 18.75px;
+        border-top-left-radius: 18.75px;
+        background-color: #353535;
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-image: url('../public/photos/connection.png');
+    }
+    .educationTextContainer {
+        height: fit-content;
+        width: fit-content;
+        align-self: flex-start;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        //max-width: 32.5rem;
+        max-width: 90%;
+        //max-width:34rem;
+        //width: auto;
+        //min-width: 38.33%;
+        min-width: 31.75%;
+       // background-color: red;
+        //min-width: 36.11%;
+       // background-color: red;
+       z-index: 5;
+    }
+    .educationTextHeader {
+        color: #FAF3D6;
+        font-family: "Helvetica Neue";
+        font-size: clamp(1rem, 2vw, 1.375rem);
+        //font-size: clamp(1.25rem, 2vw, 1.5rem);
+        font-style: normal;
+        font-weight: 500;
+        line-height: 32.268px; /* 146.672% */
+        letter-spacing: 0.66px;
+        padding-left: 2px;
+        text-transform: uppercase;
+    }
+    .educationTitleContainer {
+        width: auto;
+        height: auto;
+     //   display: flex;
+    }
+    .educationTitle {
+        color: #FFFCFC;
+        font-family: "Helvetica Neue";
+        font-size: clamp(2.5rem, 4vw, 3.125rem);
+       // font-size: clamp(3rem, 4.125vw, 4rem);
+        font-style: normal;
+        font-weight: 700;
+        line-height: 112%; /* 56px */
+        letter-spacing: -2px;
+        display: inline;
+        margin-top: 1rem;
+    }
+    .educationSubtextContainer {
+        width: 80vw;
+        height: auto;
+       // background-color: blue;
+       // display: flex;
+    
+    }
+    .educationSubtext {
+        color: #FFF;
+        font-family: "Helvetica Neue";
+        font-size: clamp(1.125rem, 2vw, 1.625rem);
+        //font-size: clamp(1.25rem, 2vw, 1.875rem);
+        font-style: normal;
+        font-weight: 300;
+        //line-height: 34px; /* 130.769% */
+        letter-spacing: -0.5px;
+     //   max-width: 32.5rem;
+        line-height: 136%;
+        display: inline;
+        margin-top: 1.5rem;
+    }
 }
 @media (min-width: 769px) and (max-width: 1024px) {
 
