--- a/styles/proposition.module.scss
+++ b/styles/proposition.module.scss
@@ -68,6 +68,7 @@
   //  background-color: red;
   //  padding-left: .875rem;
     height: 100%;
+
     display: flex;
    // justify-content: center;
    // padding-top: 1px;
@@ -1160,42 +1161,49 @@
     }
 }
 @media (min-width: 481px) and (max-width: 768px) {
-       // 1. Learn
-       .propositionTopContent {
+ 
+    // 1. Learn
+    .propositionTopContent {
         display: flex;
+    
         width: 100%;
         min-height: fit-content;
         z-index: 2;
         flex-direction: column;
-        gap:2.5rem;
-        justify-content: flex-start;
+        gap:2.25rem;
+        margin-left: 0;
+       // background-color: red;
+       // justify-content: center;
+        align-items: center;
         margin-top: 0rem;
     }
     .propositionTopLeft {
         display: flex;
+        margin-left: auto;
+        margin-right: auto;
         align-items: flex-start;
+       // background-color: red;
         justify-content: center;
-        width: 100%;
+        width: 82.5%;
         padding-top: 1.125rem;
-        padding-left: 1.875rem;
+        padding-left: 0;
         height: 100%;
         z-index: 1;
-
     }
     .topLeftContent {
         min-width: 100%;
         display: flex;
         flex-direction: column;
-
+    
     }
     .propositionTopRight {
-        width: 87.5%;
-        margin-left: auto;
-
-        margin-right: auto;
-      //  background-color: red;
+        width: 100%;
+        min-width: 100%;
+       // background-color: blue;
         padding-left: 0;
-        height: 22.5rem;
+     
+        height: 65vh;
+
         display: flex;
        // justify-content: center;
         padding-top: 0;
@@ -1246,23 +1254,23 @@
         font-family: Helvetica Neue;
       //  font-size: 45.5px;
 
-        font-size: clamp(1.5rem, 8vw, 2.85rem);
+        font-size: clamp(1.5rem, 6.325vw, 2.5rem);
         font-style: normal;
       //  padding-bottom: .7rem;
       //  border-bottom: 3px solid #E3A77C;
         font-weight: 700;
-        line-height: 120%; /* 55.808px */
+        line-height: 126%; /* 55.808px */
 
         display: inline;
         letter-spacing: -1px;
-        padding-bottom: .25rem;
+        padding-bottom: 0.1rem;
     }
     .topLeftContext {
         width: 100%;
         display: flex;
         flex-direction: column;
-        padding-top:2rem;
-        padding-left: 1.5rem;
+        padding-top:1.5rem;
+        padding-left: 0;
        // transform: rotate(0.5deg);
     }
     .fontWeight500 {
@@ -1272,7 +1280,7 @@
        // width: 715px;
         width: 100%;
         height: 100%;
-        filter: drop-shadow(0px 4px 4px rgba(10,10,10,.15));
+        filter: drop-shadow(0px 4px 4px rgba(10,10,10,.1));
         display: flex;
         justify-content: center;
       //  outline:.5px solid #FAF3D6;
@@ -1286,7 +1294,7 @@
     }
     .exploreImageButton {
         width: fit-content;
-        height: 3.75rem;
+        height: 3rem;
         border-radius: 90.75px;
         border: 2.25px solid #F9F9F9;
         background: rgba(37, 37, 37, 0.42);
@@ -1294,13 +1302,13 @@
         align-items: center;
         justify-content: center;
         gap:12px;
-        backdrop-filter: blur(8px);
+        backdrop-filter: blur(12px);
         padding-left: 0px;
         align-self: flex-end;
         margin-left: auto;
         margin-right: auto;
-        padding-left: 1.35rem;
-        padding-right: 1.25rem;
+        padding-left: 1.125rem;
+        padding-right: 1.125rem;
         margin-bottom: .875rem;
         transition: all .15s linear;
     }
@@ -1324,29 +1332,28 @@
     // 2. advance
     .midWrapper {
         width:100%;
-        margin-top:3rem;
+        margin-top:2rem;
+        margin-bottom: 3rem;
         height: fit-content;
         display: flex;
-        flex-direction: row;
+        flex-direction: column-reverse;
     // background-color: rgba(128, 0, 128, 0.8);
     }
     .midWrapperLeft {
         width: 100%;
-        height: 27rem;
-      //  background-color: red;
+        height: 65vh;
         display: flex;
-        flex-direction: column;
         z-index: 1;
-        margin-top: 1rem;
-        
-
-        filter: drop-shadow(0px 4px 4px rgba(10,10,10,.2));
+        margin-top: 2rem;
+        margin-left: auto;
+        margin-right: auto;
+     
     //  outline:1px solid #FAF3D6;
     // background-color: #252525;
     }
     .midImageLeft {
-        max-width: 88%;
-        min-width: 88%;
+        max-width: 50%;
+        min-width: 50%;
         height: 100%;
         display: flex;
         align-items: center;
@@ -1357,8 +1364,8 @@
         background-position: center;
     }
     .midImageRight {
-        min-width:88%;
-        max-width: 88%;
+        min-width: 50%;
+        max-width: 50%;
         height: 100%;
         display: flex;
         align-items: center;
@@ -1370,28 +1377,23 @@
         background-position: center;
     }
     .midWrapperRight {
-        width: 100%;
-        padding-right: 2rem;
+        width: 90%;
+      //  padding-right: 1.75rem;
+        padding-right: 7.5%;
         height: 100%;
         align-items: center;
-      
-        align-self: flex-start;
         justify-content: center;
+        margin-left: auto;
         display: flex;
-        padding-top: 0;
-    //  background-color: rgba(0, 0, 255, 0.2);
+     // background-color: rgba(0, 0, 255, 0.2);
     }
     .midWrapperContext {
         //width: 30.625vw;
-       // background-color: beige;
         width: 100%;
-       // height: fit-content; // chnage this to center
-        height: 100%;
-        padding-top:2rem;
-        padding-right: .325rem;
+        height: fit-content; // chnage this to center
+        padding-top:.5rem;
+        padding-right: 0;
         display: flex;
-    
-      
         flex-direction: column;
     //  background-color: rgba(0, 106, 255, 0.2);
         align-items: flex-end;
@@ -1445,7 +1447,7 @@
         //font-size: 45.75px;
         //font-size: 2.859375rem;
 
-        font-size: clamp(1.5rem, 5.75vw, 2.85rem);
+        font-size: clamp(1.5rem, 8vw, 2.85rem);
         font-style: normal;
         font-weight: 700;
         line-height: 121.98%; /* 55.806px */
@@ -1453,15 +1455,15 @@
     }
     .midRightContext {
         text-align: right;
-        width: 100%;
+        width: 94%;
 
         display: inline;
        // background-color: red;
+      
         transform: translateX(0);
-        margin-top: .5rem;
+    //  padding-top:4.375rem;
     //background-color: red;
     //   padding-left: 2px;
-        
     // transform: rotate(0.5deg);
     }
     .midWrapperCarousel {
@@ -1499,12 +1501,11 @@
         display: flex;
         flex-direction: column;
         padding-top: 0rem;
-  
       //  background-color: rgba(255, 0, 0, 0.161);
     }
     .propositionBottomContent {
         display:flex;
-        flex-direction: row;
+        flex-direction: column;
         width: 100%;
     //    background-color: rgba(128, 0, 128, 0.184);
         height: fit-content;
@@ -1517,7 +1518,7 @@
 
         //align-items: center;
        // justify-content: center;
-       padding-top: 2rem;
+       padding-top: 3.25vh;
        padding-left: 2rem;
 
       //  background-color: rgba(128, 81, 0, 0.484);
@@ -1550,10 +1551,10 @@
         line-height: 121.98%; /* 19.026px */
         letter-spacing: -0.468px;
         padding-top: 1px;
-        transform: translateX(.45rem) translateY(.2rem);
+        transform: translateX(0) translateY(.2rem);
     }
     .bottomIconText {
-        color: #7978F8;
+        color: rgb(155, 155, 246);
         font-family: Helvetica Neue;
        // font-size: 18.75px;
         font-size: 1.171875rem;
@@ -1568,7 +1569,7 @@
         min-width: fit-content;
         display: flex;
 
-        padding-left: .425rem;
+        padding-left: 0;
   
         align-items: center;
         gap:2rem;
@@ -1590,13 +1591,11 @@
         font-size: clamp(1.125rem, 3vw, 1.625rem);
     }
     .bottomContentRight {
-        width:58%;
+        width:88%;
         margin-left: auto;
         margin-right: auto;
-    //    background-color: red;
-    
-        align-self: flex-end;
-        height: 15rem;
+       // background-color: red;
+        margin-top: 2rem;
         min-height: 15rem;
         max-height: 15rem;
     }
@@ -1604,14 +1603,10 @@
         width: 100%;
         height: 100%;
         flex-shrink: 0;
-        //border-radius: 24px;
+        border-radius: 24px;
         display: flex;
         align-items: center;
         justify-content: center;
-        border-top-left-radius: 24px;
-        border-top-right-radius: 0;
-        border-bottom-right-radius: 0;
-        border-bottom-left-radius: 24px;
      //   outline: 1px dashed #FAF3D6;
         background-color: #252525;
         background-size: cover;
@@ -1624,15 +1619,17 @@
     }
     .caseStudiesButton {
         width: fit-content;
-        height:3.75rem;
-        padding-left:1.75rem;
+       // height: 3rem;
+        height:3.5rem;
+        min-height: 3.5rem;
+        padding-left:1.5rem;
         padding-right: 1.5rem;
-        padding-top: .4rem;
-        padding-bottom: .4rem;
+        padding-top: 0;
+        padding-bottom: 0;
         font-family: Helvetica Neue;
         //font-size: 22.5px;
-        font-size: clamp(1.125rem, 4vw, 1.325rem);
-    
+        font-size: clamp(1.125rem, 4.125vw, 1.375rem);
+        
         flex-shrink: 0;
         border-radius: 90.75px;
         border: 2px solid #F9F9F9;
@@ -1651,8 +1648,8 @@
         align-items: center;
         justify-content: center;
 
-        margin-top: 3.5rem;
-        transform: translateY(-1.325rem);
+        margin-top: 2rem;
+        transform: translateY(0);
     
         margin-left: auto;
         margin-right: auto;
@@ -1668,7 +1665,7 @@
         min-width: fit-content;
 
         display: flex;
-        margin-top: 3.25rem;
+        margin-top: 2.25rem;
         overflow-y: hidden;
         overflow-x: scroll;
         align-items: center;
@@ -1696,13 +1693,13 @@
     }
 
     .bottomCarouselItem {
-        width: 25%;
+        width: 33.33%;
         scroll-snap-align: start;
-        min-width: 25%;
+        min-width: 33.33%;
         height: 100%;
 
         align-self: center;
-        flex: 0 0 25%; 
+        flex: 0 0 33.33%; 
         display: flex;
         flex-direction: column;
 
@@ -1712,8 +1709,8 @@
         justify-content: center;
     }
     .bottomCarouselImage {
-        height: 11rem;
-        width: 86%;
+        height: 8.5rem;
+        width: 88%;
         margin-left: auto;
         margin-right: auto;
 
@@ -1721,7 +1718,7 @@
         display: flex;
         align-items: center;
         border-radius: 26px;
-        transform: scale(.95);
+        transform: scale(.975);
         justify-content: center;
         background-color: #252525;
         border: 1px solid #FAF3D6;
@@ -1730,11 +1727,11 @@
         color: #FAF3D6;
         font-family: Helvetica Neue;
        // font-size: 26.25px;
-      //  font-size: 1.625rem;
+        font-size: 1.625rem;
         font-style: normal;
 
         font-weight: 500;
-        font-size: clamp(1rem, 2.75vw, 1.625rem);
+        font-size: clamp(1rem, 3vw, 1.625rem);
         line-height: 122%; /* 32.02px */
         letter-spacing: -0.5px;
         text-align: center;
@@ -1743,7 +1740,7 @@
         color: #FAF3D6;
         font-family: Helvetica Neue;
        // font-size: 18.75px;
-       font-size: clamp(1rem, 2.75vw, 1.175rem);
+       font-size: clamp(1rem, 3vw, 1.175rem);
     
         font-style: normal;
         font-weight: 300;
@@ -2463,7 +2460,7 @@
         width: 52.5%;
        // min-width: 45%;
         height: 27rem;
-        background-color: red;
+      //  background-color: red;
         display: flex;
         flex-direction: row;
         z-index: 1;
@@ -2968,7 +2965,6 @@
         width: 52.5%;
        // min-width: 45%;
         height: 27rem;
-        background-color: red;
         display: flex;
         flex-direction: row;
         z-index: 1;
