--- a/styles/page.module.scss
+++ b/styles/page.module.scss
@@ -4082,6 +4082,7 @@ padding-bottom: 5rem;
   .footerLeftContent {
     height: fit-content;
     margin-top: 0rem;
+//    width: 100%;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -5458,7 +5459,7 @@ padding-bottom: 5rem;
   
     max-height: fit-content;
     min-height: fit-content;
-   // height: auto;
+    height: auto;
     width: 100%;
     //width: 100%;
     background-color: #252525;
@@ -5471,14 +5472,14 @@ padding-bottom: 5rem;
   .footerContent {
     height: fit-content;
     width: 100%;
-    margin-top: 3.5rem;
+    margin-top: 0;
     text-align: center;
 
     text-align: left;
     //background-color: red;
     display: flex;
     margin-left: 0;
-
+    padding-left: 0;
     //margin-left: 9.32vw;
   }
   .footerLeftContent {
@@ -5488,8 +5489,9 @@ padding-bottom: 5rem;
     flex-direction: column;
     //margin-left: 9.32vw;
     text-align: left;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 0;
+    margin-right: 0;
+    width: 100%;
     text-align: center;
   
   }
@@ -5522,7 +5524,7 @@ padding-bottom: 5rem;
     letter-spacing: -0.675px;
     text-transform: capitalize;
     background: #252525;
-    margin-top: 2rem;
+    margin-top: 0rem;
     transition: all .175s linear;
   }
   .footerButton:hover {
@@ -5557,11 +5559,14 @@ padding-bottom: 5rem;
     letter-spacing: -0.787px;
   }
   .footerImageContainer {
-    border-radius: 37.5px;
-    width: 43.645vw;
-    height: 100%;
-    transform: translateX(6.45vw);
-    display: none;
+    //border-radius: 37.5px;
+    border-top-left-radius: 37.5px;
+    border-bottom-left-radius: 37.5px;
+    width: 88%;
+    height: 20rem;
+    transform: translateY(.25rem);
+  //  display: none;
+  //  display: block;
    // display: flex;
     align-items: center;
     justify-content: center;
