finished large breakpoint

--- a/styles/page.module.scss
+++ b/styles/page.module.scss
@@ -7031,7 +7031,7 @@ padding-bottom: 5rem;
   }
 }
 
-
+/*
 @media (min-width: 1281px) and (max-width: 1439px) {
   .main {
     display: flex;
@@ -7354,7 +7354,7 @@ padding-bottom: 5rem;
     font-size: 2.75rem;
     font-style: normal;
     font-weight: 400;
-    line-height: 123%; /* 71.509px */
+    line-height: 123%; 
     letter-spacing: -.875px;
   
   }
@@ -7366,7 +7366,7 @@ padding-bottom: 5rem;
     font-size: 1.625rem;
     font-style: normal;
     font-weight: 300;
-    line-height: 121%; /* 42.273px */
+    line-height: 121%; 
     letter-spacing: -.3px;
     display: inline;
   }
@@ -7378,7 +7378,7 @@ padding-bottom: 5rem;
     font-size: 1.625rem;
     font-style: normal;
     font-weight: 300;
-    line-height: 122%; /* 42.273px */
+    line-height: 122%;
     letter-spacing: -.3px;
     display: inline;
     transform: scaleY(.98);
@@ -7391,7 +7391,7 @@ padding-bottom: 5rem;
     font-size: 1.640625rem;
     font-style: normal;
     font-weight: 300;
-    line-height: 122%; /* 42.273px */
+    line-height: 122%;
     letter-spacing: -.3px;
     display: inline;
   }
@@ -7549,7 +7549,7 @@ padding-bottom: 5rem;
     font-size: clamp(2.75rem, 4.325vw, 3.51rem);
     font-style: normal;
     font-weight: 400;
-    line-height: 1.21082621083; /* 67.04px */
+    line-height: 1.21082621083; 
     letter-spacing: -1.687px;
     display: inline;
   
@@ -7608,7 +7608,7 @@ padding-bottom: 5rem;
     padding-bottom: 1.5px;
     font-style: normal;
     font-weight: 500;
-    line-height: 122%; /* 27.445px */
+    line-height: 122%;
     letter-spacing: -0.675px;
     text-transform: capitalize;
     filter: drop-shadow(0px 4px 8px rgba(0,0,0,0.25));
@@ -7636,7 +7636,7 @@ padding-bottom: 5rem;
     font-style: normal;
     font-weight: 500;
     padding-bottom: 1.5px;
-    line-height: 122%; /* 27.445px */
+    line-height: 122%; 
     letter-spacing: -0.5px;
     text-transform: capitalize;
     transition: all .15s linear;
@@ -7677,7 +7677,7 @@ padding-bottom: 5rem;
     font-size: 2.34375rem;
     font-style: normal;
     font-weight: 500;
-    line-height: 122%; /* 45.742px */
+    line-height: 122%;
     letter-spacing: -1.125px;
     text-transform: uppercase;
   }
@@ -7765,7 +7765,7 @@ padding-bottom: 5rem;
     font-style: normal;
     text-align: center;
     font-weight: 500;
-    line-height: 121.98%; /* 59.465px */
+    line-height: 121.98%; 
     letter-spacing: -1.462px;
   }
   .testimonialHeaderSubtext {
@@ -7778,7 +7778,7 @@ padding-bottom: 5rem;
    // font-size: 1.640625rem;
     font-style: normal;
     font-weight: 300;
-    line-height: 120.781%; /* 31.705px */
+    line-height: 120.781%; 
     letter-spacing: -0.787px;
   }
   .testimonialCardWrapper {
@@ -7847,7 +7847,7 @@ padding-bottom: 5rem;
    // font-size: 26.25px;
     font-style: normal;
     font-weight: 400;
-    line-height: 122%; /* 32.02px */
+    line-height: 122%;
     letter-spacing: -0.5px;
   }
   .testimonialQuoteSubtext {
@@ -7859,7 +7859,7 @@ padding-bottom: 5rem;
     font-size: clamp(1rem, 2vw, 1.17rem);
     font-style: normal;
     font-weight: 400;
-    line-height: 120%; /* 22.347px */
+    line-height: 120%; 
     letter-spacing: -0.562px;
   }
   .testimonialSliderContainer {
@@ -7994,7 +7994,7 @@ padding-bottom: 5rem;
     font-size: 3.015625rem;
     font-style: normal;
     font-weight: 500;
-    line-height: 122%; /* 59.465px */
+    line-height: 122%; 
     letter-spacing: -1px;
    // padding-top: 2.125rem;
     padding-top: 1.125em;
@@ -8101,7 +8101,7 @@ padding-bottom: 5rem;
     font-size: 3.046875rem;
     font-style: normal;
     font-weight: 500;
-    line-height: 121.98%; /* 59.465px */
+    line-height: 121.98%; 
     letter-spacing: -1.462px;
   }
   .faqsContentContainer {
@@ -8281,7 +8281,7 @@ padding-bottom: 5rem;
   }
 
    
-}
+}*/
 @media (min-width: 1441px) {
 
  
