--- a/styles/education.module.scss
+++ b/styles/education.module.scss
@@ -1490,5 +1490,160 @@
     }
 }
 @media (min-width: 1281px) and (max-width: 1439px) {
-  
+    .educationContainer {
+        background-color: #252525;
+        height: fit-content;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        padding-bottom: 2.25rem;
+    }
+    .educationTopContainer {
+        width: 100%;
+        height: fit-content;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-top: 3.75rem;
+    }
+    .educationTopHeader {
+        color: #FAF3D6;
+        font-family: "Helvetica Neue";
+        font-size: clamp(1.124rem, 2vw, 1.5rem);
+        font-style: normal;
+        font-weight: 500;
+        line-height: 134%; /* 134.286% */
+        letter-spacing: 0.75px;
+        text-transform: uppercase;
+        margin-left: auto;
+        margin-right: auto;
+    
+    }
+    .panelContainer {
+        width: 85%;
+        //height: 26.25rem;
+        //background-color: red;
+       // height: ;
+       z-index: 1;
+      // margin-top: 3rem;
+      display: flex;
+      flex-direction: column;
+    }
+    .educationTopPanel {
+        width: 100%;
+   
+        height: 50vh;
+        box-shadow: 0px 6px 0px 0px rgba(27,27,27,.2);
+        background-color: #353535;
+        border-radius: 24px;
+        display: flex;
+        background-image: url('../public/photos/panel3.png');
+        background-size: cover;
+        background-repeat: no-repeat;
+       // align-self: center;
+        //align-items: center;
+        //justify-content: center;
+        margin-left: auto;
+        margin-right: auto;
+        z-index: 2;
+        margin-top: 2.25rem;
+    }
+    .educationPanelText {
+        color: #FFFBEC;
+        text-align: center;
+        font-family: "Helvetica Neue";
+        font-size: clamp(2.5rem, vw, 4rem);
+        font-style: normal;
+        font-weight: 600;
+        line-height: 121.98%; /* 87.825px */
+        letter-spacing: -1.5px;
+        text-transform: capitalize;
+        margin-left: auto;
+        margin-right: auto;
+        display:inline-block;
+        vertical-align: middle;
+        margin-top: auto;
+        margin-bottom: auto;
+        z-index: 999;
+    }
+    .educationAccessButton {
+        width: 35%;
+      //  width: 22.6%;
+        height:4rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        //border: 2.25px solid #FAF3D6;
+        color: #0a0a0a;
+        text-align: center;
+        font-family: "Helvetica Neue";
+        font-size: clamp(1.25rem, 2vw, 1.425rem);
+        font-style: normal;
+        font-weight: 600;
+        line-height: 121.98%; /* 27.445px */
+        letter-spacing: -0.675px;
+        text-transform: capitalize;
+        border-radius: 10px;
+        background: #FAF3D6;
+        gap:1rem;
+        padding-left: 0;
+        transform: translateY(-2rem);
+        transition: all .175s linear;
+        z-index: 3;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .textCircleV2 {
+        z-index: 1;
+        position:absolute;
+        top:-1.625rem;
+        left:-4.875rem;
+        animation-duration: 35s;
+        animation-name: truka-circle;
+        animation-iteration-count:infinite;
+        animation-timing-function: linear;
+     //   display: none;
+    }
+    .educationSeperator {
+        margin-left: auto;
+        margin-right:auto;
+      //  transform: scale(.9);
+      align-self: center;
+        width: auto;
+        z-index: 5;
+        display: flex;
+      //  background-color: red;
+   
+        margin-top:1rem;
+    }
+    .plusSymbol {
+        align-self: flex-start;
+   //     transform: translateY(-5%) translateX(5%) scale(.9);
+        &:nth-of-type(1) {
+            margin-right: 3.25rem;
+        }
+        &:nth-of-type(2) {
+            margin-left: 3.25rem;
+        }
+    }
+    .educationBottomWrapper {
+        display: flex;
+       // flex-direction: column;
+        width: 100%;
+        align-items: center;
+        justify-content: space-between;
+        padding-left: 8%;
+        //background-color: red;
+        gap:2rem;
+    }
+    .educationBottomWrapperAlt {
+        display: flex;
+
+        width: 100%;
+        align-items: center;
+       // padding-left: 10%;
+      //  background-color: red;
+        gap:2rem;
+        justify-content: space-between;
+    }
 }
